<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PartyBox Photobooth</string>
    <string name="capture">Capture</string>
    <string name="retake">Retake</string>
    <string name="print">Print</string>
    <string name="settings">Settings</string>
    <string name="close">Close</string>
    <string name="grant_permissions">Grant Permissions</string>
    <string name="setup_message">Camera and storage permissions are required. Tap once to continue setup.</string>
    <string name="ring_brightness">Ring Brightness</string>
    <string name="flash_toggle">Flash LED</string>
</resources>
